# AI-CyberLogAgent

./: .dockerignore  .gitignore  FUNCTIONAL_SPECIFICATION.md  HOW_TO_START_WORK.md  README.md  TODO_ideas.md  download_embedding_model.bat  log_manage.py  pyproject.toml  qq.py  ruff.toml  test_cicd.py  test_optimized.py  verify_optimizations.py
.github/workflows/: mirror_to_gitverse.yml  push_dockerhub.yaml
.gitverse/workflows/: docker-push-axstiz.yaml  docker-push.yaml  gitverse-nerobit-ci.yaml  ruff_check.yaml  ruff_fix.yaml
ai_agent/: ai_config.py
ai_cyberlogagent/config/: cfg.py  commands.py
ai_cyberlogagent/default_logs_analyse/: base_analyse.py  default_analyse.py  log_analyzer.py  log_collector.py  settings_analyse.py
app_simulation/: LOG_GENERATOR_GUIDE.md
app_simulation/log_gen/: CONFIGURATION.md  LOG_GEN_CHEATSHEET.md  QUICKSTART.md  README.md  __init__.py  cli.py  config_loader.py  examples.py  log_gen.py  log_gen_cli.py  log_generator_config.json
app_simulation/log_gen/configs/: README.md  attack.json  debug_workers.json  realistic_mixed.json  startup.json
config/: cfg.py  commands.py
default_logs_analyse/: log_collector.py
log_ai-agent/: .dockerignore  .env.example  Dockerfile  README_DOCKER.md  app.py  docker-compose.yml  init-db.sql
log_ai-agent/ai_agent/: agent_settings.py
log_ai-agent/config/: HOW_TO_USE_CONSOLE.md  cfg.py
log_ai-agent/default_logs_analyse/: __init__.py  log_analyzer.py  log_collector.py  settings.py
log_ai-agent/site/: Dockerfile  nginx.conf
log_ai_agent/: .dockerignore  .env.example  Dockerfile  app.py  docker-compose.yml  docker-entrypoint.sh  init-db.sql
log_ai_agent/ai_agent/: RAG_gigachat.py  TEST_GIGACHAT.md  gigachat.py  gigachat_async.py  gigachat_chat.py  log_analysis_service.py
log_ai_agent/ai_agent/rag_context/: response_format.json
log_ai_agent/ai_agent_v2/: README.md  __init__.py  app_integration.py  callbacks.py  chat_integration.py  config.py  download_mitre.py  init_mitre.py  load_mitre_full.py  models_types.py  run.py  test_quick.py  test_rag.py  test_rag_flow.py
log_ai_agent/ai_agent_v2/chains/: __init__.py  agent1.py  agent2.py  agent3.py  description_agent.py  graph_nodes.py  llm.py  prefilter.py  rag_chain.py  yara_generator.py
log_ai_agent/ai_agent_v2/chains/providers/: __init__.py  aitunnel.py  base.py  gigachat.py  ollama.py
log_ai_agent/ai_agent_v2/embedding/: __init__.py  manager.py
log_ai_agent/ai_agent_v2/engines/: __init__.py  sigma_engine.py  yara_engine.py
log_ai_agent/ai_agent_v2/examples/: __init__.py  basic.py
log_ai_agent/ai_agent_v2/knowledge_base/: __init__.py  github_loader.py  local_loader.py  manager.py  mitre_loader.py  mitre_processed.json
log_ai_agent/ai_agent_v2/metrics/: README_METRICS.md  metrics_logger.py
log_ai_agent/ai_agent_v2/metrics/TESTS_DATA/: REPORT_for_test2.md  SUMMARY_REPORT.md  VERIFICATION_for_report_2.md  generated_logs_lastday.txt
log_ai_agent/ai_agent_v2/models/: __init__.py  schemas.py
log_ai_agent/ai_agent_v2/parsers/: __init__.py  apache_parser.py
log_ai_agent/ai_agent_v2/pipeline/: README_PIPELINE.md  __init__.py  full_pipeline.py  langgraph_pipeline.py
log_ai_agent/ai_agent_v2/pipeline_tests/: __init__.py  conftest.py  rag_ground_truth.json  run_rag_eval.py  test_agent1.py  test_agent3.py  test_description_agent.py  test_full_pipeline.py  test_graph_nodes.py  test_llm.py  test_new_features.py  test_pipeline_basic.py  test_prefilter.py  test_quick.py  test_rag.py  test_rag_eval.py  test_rag_evaluation.py  test_rag_flow.py  test_yara.py  test_yara_generator.py  test_yara_sigma.py
log_ai_agent/ai_agent_v2/prompts/: __init__.py  log_analysis.py  system.py
log_ai_agent/ai_agent_v2/rules/sigma/: brute_force_authentication.yml  mimikatz_detection.yml  path_traversal.yml  powershell_encoded_command.yml  remote_file_inclusion.yml  xss_attempt.yml  (+3 more)
log_ai_agent/ai_agent_v2/visual_graph/: pipeline_graph.mmd  render_graph.py
log_ai_agent/config/: cfg.py  commands.py
log_ai_agent/db/: __init__.py  models.py  session.py
log_ai_agent/default_logs_analyse/: log_analyzer.py  log_collector.py
log_ai_agent/pipeline/: README_INGEST_API.md  __init__.py  kafka_consumer.py  log_ingest_api.py
log_ai_agent/pipeline/examples/: send_logs_to_ingest_api.py
log_ai_agent/postgres/: Dockerfile
log_ai_agent/site/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
log_ai_agent/site/public/: animation.webm
log_ai_agent/site/src/: App.vue
log_ai_agent/vector/: Dockerfile  vector.toml
log_ai_agent/vector/lua/: chunk_logs.lua
log_gen/: CONFIGURATION.md  README.md  __init__.py  cli.py  config_loader.py  examples.py  log_gen.py
log_gen/configs/: high_load.json  stable.json
mitre_log_simulator/: Dockerfile  README.md  docker-compose.yml  generator.py  orchestrator.sh  run.ps1  run.sh
quick_start/: .env.example  docker-compose.yml
terminal_app/: log_manage_settings.py
(+28 files in other folders)
