[project]
name = "ai-cyberlogagent"
version = "0.2.0"
description = "Add your description here"
requires-python = "==3.13.0"
dependencies = [
    "aiohttp==3.11.11",
    "aiokafka==0.12.0",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "fastapi==0.124.4",
    "grandalf>=0.8",
    "huggingface-hub==0.36.0",
    "langchain==0.3.27",
    "langchain-chroma==0.2.6",
    "langchain-community==0.3.31",
    "langchain-core==0.3.80",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.0",
    "langchain-openai==0.3.11",
    "langgraph==0.4.0",
    "mitreattack-python==5.3.0",
    "pandas==2.3.3",
    "psycopg2-binary==2.9.11",
    "pytest>=9.0.3",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml>=6.0",
    "ruff>=0.14.9",
    "scikit-learn==1.6.1",
    "sentence-transformers==5.2.0",
    "sqlalchemy==2.0.49",
    "taxii2-client>=2.3.0",
    "tenacity==9.0.0",
    "uvicorn==0.38.0",
    "yara-python>=4.5.4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.9",
]

[tool.setuptools]
packages = ["log_ai_agent"]


# Совместимо с Ruff 0.4.0+

[lint]
select = [
  "E",   # PEP 8 (pycodestyle)
  "W",
  "F",   # flake8
  "I",   # flake8-import-checker
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade — важно: включено
  "S",   # bandit
  "D",   # pydocstyle
  "ISC", # isort
]

# Включаем режим предварительного просмотра для всех новых правил
preview = true  # включаем все экспериментальные правила
unfixable = []  # не отключаем никакие правила от автоматического исправления
ignore = []  # не игнорируем никакие ошибки, чтобы ничего не пропустить

exclude = [
  ".venv",
  "venv",
  "__pycache__",
  "*.pyc",
  "dist",
  "build",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  "*.pyi",
]

# Настройки pycodestyle
[lint.pycodestyle]
max-line-length = 79

# Исключения для __init__.py
[lint.per-file-ignores]
"__init__.py" = ["F401"]

# Форматирование
[format]
indent-style = "space"
# Используем black-совместимые настройки форматирования
quote-style = "double"
line-ending = "auto"
